--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="Images/photography.jpg">
+                    <img src="Images/PhotographyNew.jpg">
                     <div class="layer">
                         <h3>Photography</h3>
                         <p>A photography assignment dedicated to moments in 
