--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         <a href="https://www.instagram.com/real_royyy/"><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://in.linkedin.com/in/roy-veliath-7194b7131?trk=pub-pbmap"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-                    <a href="Images/Resume.pdf" class="btn btn2" download class="btn btn2">Download Resume</a>
+                    <a href="Documents/Resume.pdf" class="btn btn2" download class="btn btn2">Download Resume</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
